--- a/index.html
+++ b/index.html
@@ -323,21 +323,13 @@ function myFacebookLogin() {
 					<span class="hover-text font-light ">iSCIncorporated</span>
 					<br />
 					<br />
+					<!-- Facebook Website Login button -->
 					<fb:login-button onclick="myFacebookLogin()" scope="public_profile,email,publish_actions,user_about_me,user_status,user_birthday,user_hometown,user_work_history,user_education_history" onlogin="checkLoginState();">
 					</fb:login-button>
-					
-					<div id="publishBtn" class="fb-send" style="padding-top: 20px">Click me to publish a "Hello, World!" post to Facebook.</div>
-
-
-<script>
-document.getElementById('publishBtn').onclick = function() {
-  FB.api('/me/feed', 'post', {message: 'Hello, world! I am going to visit the iSC Inc. Festival! A public iSC Inc. event for everybody to learn new things with wikis!'}, function(response) {
-    Log.info('API response', response);
-    document.getElementById('publishBtn').innerHTML = 'API response is ' + response.id;
-  });
-  return false;
-}  
-</script>
+					<!-- Facebook Post button -->
+					<div id="publishBtn" style="padding-top: 20px">Click me to publish a "Hello, World!" post to Facebook.</div>
+					<!-- Facebook Messenger send button -->
+    					<div class="fb-send" data-href="https://j.mp/iSCIncFestival" data-layout="button_count"></div>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a target="_blank" href="https://twitter.com/iSCIncorporated"><i class="icon icon-twitter"></i></a></p>
@@ -359,6 +351,15 @@ document.getElementById('publishBtn').onclick = function() {
 	<script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
 	<script src="js/script.js"></script>
 	<script src="http://connect.facebook.net/en_US/all.js"></script>
+	<script>
+	document.getElementById('publishBtn').onclick = function() {
+	  FB.api('/me/feed', 'post', {message: 'Hello, world! I am going to visit the iSC Inc. Festival! A public iSC Inc. event for everybody to learn new things with wikis!'}, function(response) {
+	    Log.info('API response', response);
+	    document.getElementById('publishBtn').innerHTML = 'API response is ' + response.id;
+	  });
+	  return false;
+	}  
+	</script>
 	
 	<!-- fancybox init -->
 	<script>
