--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ function myFacebookLogin() {
 					<fb:login-button onclick="myFacebookLogin()" scope="public_profile,email,publish_actions,user_about_me,user_status,user_birthday,user_hometown,user_work_history,user_education_history" onlogin="checkLoginState();">
 					</fb:login-button>
 					<!-- Facebook Post button -->
-					<div id="publishBtn" style="padding-top: 20px">Click me to publish a "Hello, World!" post to Facebook.</div>
+					<div id="publishBtn" style="padding-top: 20px"><img src="images/facebook/sendfbpostbt.png" alt="Click me to publish your first iSC Inc. Festival post to Facebook."></div>
 					<!-- Facebook Messenger send button -->
     					<div class="fb-send" data-href="https://j.mp/iSCIncFestival" data-layout="button_count"></div>
 				</div><!-- /col12 -->
