Add Google Site Verification

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<meta name="description" content="A iSC Inc. event for everybody." />
 	<meta name="keywords" content="isc inc, events, festival">
 
+	<!-- Verification -->
+	<meta name="google-site-verification" content="4qG5K35d1YKVcIFKc6nBJ_kQdCktkD02bQuqoETSjkQ" />
+
 	<!-- LINKS -->
 	<link rel="home" href="https://j.mp/iSCIncFestival">
         <link rel="index" href="https://iscinc.github.io/festival/index.html">
