Add Google Platform Library script

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 
 	<!-- IMAGES -->
 	<link rel="prefetch" href="images/zoom.png">
+	
+	<!-- Load Scripts -->
+		<!-- Load the Google Platform Library -->
+		<script src="https://apis.google.com/js/platform.js" async defer></script>
 
 </head>
 <body>
