Add <meta> tag for Google Sign-In Client ID

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 		<!-- Load the Google Platform Library -->
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
 
+	<!-- Login -->
+		<!-- Google Sign-In -->
+		<meta name="google-signin-client_id" content="489946905870-t74lo2vorpp08boqcu74jc397eheomgf.apps.googleusercontent.com">
+
 </head>
 <body>
 
