Add Google Sign-In button

--- a/index.html
+++ b/index.html
@@ -330,6 +330,14 @@ function myFacebookLogin() {
 					<span class="hover-text font-light ">San Francisco, California, USA<br>zip code XXXXXX</span>
 				</div><!-- /col12 -->
 				<div class="col-12 col-sm-2 with-hover-text">
+					<p><a target="_blank" href="popups/google+.html" onclick="basicPopup(this.href);return false"><i class="icon icon-google-plus"></i></a></p>
+					<span class="hover-text font-light ">iSC Inc.</span>
+					<br />
+					<br />
+					<!-- Google Sign-In button -->
+					<div class="g-signin2" data-onsuccess="onSignIn"></div>
+				</div><!-- /col12 -->
+				<div class="col-12 col-sm-2 with-hover-text">
 					<p><a target="_blank" href="popups/facebook.html" onclick="basicPopup(this.href);return false"><i class="icon icon-facebook"></i></a></p>
 					<span class="hover-text font-light ">iSCIncorporated</span>
 					<br />
