Add Google Sign-In Scope: "profile email"

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 	<!-- Login -->
 		<!-- Google Sign-In -->
 		<meta name="google-signin-client_id" content="489946905870-t74lo2vorpp08boqcu74jc397eheomgf.apps.googleusercontent.com">
+		<!-- Google Sign-In Scope -->
+		<meta name="google-signin-scope" content="profile email">
 
 </head>
 <body>
