--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
 
 	<!-- Login -->
-		<!-- Google Sign-In -->
+		<!-- Google Sign-In Client ID -->
 		<meta name="google-signin-client_id" content="489946905870-t74lo2vorpp08boqcu74jc397eheomgf.apps.googleusercontent.com">
 		<!-- Google Sign-In Scope -->
 		<meta name="google-signin-scope" content="profile email">
