--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ function myFacebookLogin() {
 					<br />
 					<br />
 					<!-- Google Sign-In button -->
-					<div class="g-signin2" data-onsuccess="onSignIn"></div>
+					<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
 					<!-- Google Sign-Out button/link -->
 					<a href="#" onclick="signOut();">Sign out</a>
 				</div><!-- /col12 -->
